tdf#160768 Changing value in a text box control with a link cell set up, Crash

regression from
    commit 7510cca63690ea97eb02a43f698fc183c3d0434a
    Author: Noel Grandin <noel.grandin@collabora.co.uk>
    Date:   Tue Mar 26 15:56:02 2024 +0200
    convert OCellValueBinding to comphelper::WeakComponentImplHelper

Change-Id: I36ec4cca7a48992b29d6c2ff5c87fb0fed1c8c3f
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/166540
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>